--- a/product-service-config/application.yml
+++ b/product-service-config/application.yml
@@ -12,8 +12,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
-        format_sql: true
-        use_sql_comments: true
+#        format_sql: true
+#        use_sql_comments: true
         show_sql: true
 
 
